Fix bug with narration bar transcript button not showing on some themes

--- a/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
@@ -972,6 +972,7 @@ a:focus .wcagLogo {
 }
 
 .audioTranscript .mejs-container .mejs-controls .audioTranscriptBtn button, #x_footerBlock .audioTranscript .mejs-container .mejs-controls .audioTranscriptBtn button {
+	font-family: "Font Awesome 5 Free";
 	background-image: none;
 	font-size: 15px !important;
 	color: #eee;
